(ocamlyacc parser)
(ocamllex lexer)
(library
  (name slanglib)
  (modules
    Front_end
    Interp_0
    Interp_1
    Interp_2
    Interp_3
    Jargon
    Jargon_to_x86
    Ast
    Past
    Errors
    Option
    Free_vars
    Pptree
    Parser
    Lexer
    Static
    Tests
    Past_to_ast)
  (preprocess (pps ppx_yojson_conv))
)

(executable
  (name slang)
  (libraries slanglib)
  (modules slang))